Twain_Call_c_sharp/TwainCaLL.h

int __stdcall CALL_InitInstance(HANDLE hWnd, long ProcXFerDone, long ProcEject);
int __stdcall CALL_SelectSource();
int __stdcall CALL_StringSource(const char* szProductName);
int __stdcall CALL_TWAppAquire(int ShowUI, char* pImgDir, char* pImgPrefix, 
							   FREE_IMAGE_FORMAT fiFormat, int optFlag);
int __stdcall CALL_TWAppAquireFixedName(int ShowUI, char* szFileName, int optFlag);
int __stdcall CALL_TWAppQuit();
int __stdcall CALL_ChangeCount(int count);
int __stdcall CALL_StartSetup(void);
// int __stdcall HPG3110_StartSetup(void);
int __stdcall CALL_SetProperty(TW_UINT16 cap, int val);